<resources>
    <string name="app_name">Mercado Bit</string>
    <string name="facebook_app_id">491877421186135</string>
    <string name="fb_login_protocol_scheme">fb491877421186135</string>
    <string name="title_activity_comprador">CompradorActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="solicitudes">Solicitudes</string>
    <string name="configuracion">Configuracion</string>
    <string name="ayuda">Ayuda</string>
    <string name="ser_vendedor">Ser vendedor</string>
    <string name="apartado_para_vendedor">Apartado para vendedor</string>
</resources>
