<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_home"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/ic_config"
            android:title="@string/configuracion" />
        <item
            android:id="@+id/nav_ayuda"
            android:icon="@drawable/ic_help"
            android:title="@string/ayuda" />
    </group>

    <item android:title="@string/apartado_para_vendedor">
        <menu>
            <item
                android:id="@+id/nav_vendedor"
                android:icon="@drawable/ic_vendedor"
                android:title="@string/ser_vendedor" />
        </menu>
    </item>

</menu>
